# LLM-WIKI

./: .gitignore  DEPLOY_GCP.md  GCP_DEPLOYMENT.md  README.md  cloudbuild.backend.yaml
Evaluation/: backend_retrieval_experiments.md
backend/: Dockerfile  app.py  pyproject.toml
backend/evaluation/: __init__.py  golden_set.jsonl  metrics.py  run_eval.py
backend/retrieval/: __init__.py  context_packer.py  graph_traversal.py  query_analyzer.py  query_enhancer.py  reranker.py  router.py  vector_search.py
frontend/: .env.local.example  .gitignore  LLM-WIKI-INTEGRATION.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/types/: assets.d.ts
llm-wiki/: .gitignore  AGENTS.md  Welcome.md
llm-wiki/.githooks/: pre-commit
llm-wiki/.obsidian/: graph.json
llm-wiki/Schema/: command-reference.md  entity_ontology.yaml  extraction_schema.json  frontmatter-schema.md  graph_schema.json  lint-checklist.md  naming-conventions.md  relationship_ontology.yaml  source-manifest.jsonl  topic-backlog.jsonl  topic-processing-log.jsonl  workflow-examples.md
llm-wiki/Wiki/: catalog.jsonl  generated-index.md  index.md
llm-wiki/_templates/: concept-note.md  entity-note.md  log-note.md  project-note.md  source-note.md  topic-note.md
llm-wiki/retrieval/: cluster_map.json  entity_aliases.json  entity_index.json  graph_edges.jsonl  graph_nodes.jsonl  knowledge_graph.json  knowledge_graph_minimal.json  lecture_index.json  raw_chunks.jsonl  retrieval_chunks.jsonl  wiki_chunks.jsonl
llm-wiki/scripts/: audit_public.py  build_graph_index.py  chunk_sources.py  (+10 more)
(+260 files in other folders)
