[project]
name = "backend"
version = "0.2.0"
description = "LLM-Wiki RAG backend (FastAPI + LiteLLM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "litellm>=1.52.0",
    "numpy>=1.26.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]